<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:backgroundTint="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAciertos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40sp"
            android:text="@string/aciertos"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonReiniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reiniciar" />

        <TextView
            android:id="@+id/textViewIntentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:text="@string/intentos"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_1"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_2"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_3"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_4"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_9"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_10"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_11"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_12"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp">

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_13"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_14"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_15"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:src="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/teal_200"
            android:contentDescription="@string/tarjeta_16"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_shuffle"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

<!--     "Back" button -->
    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/buttonMenu" />

</LinearLayout>